@@ -1,6 +1,5 @@
-# Generated by roxygen2 (4.0.1): do not edit by hand
+# Generated by roxygen2 (4.1.1): do not edit by hand
 
 export(beep)
-export(ping)
 import(audio)
 import(stringr)
