@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/beepr.R
 \name{beep}
 \alias{beep}
 \title{Play a short sound}
